--- a/workers.yml
+++ b/workers.yml
@@ -15,6 +15,8 @@
   tasks:
     - name: remove swap
       shell: "swapoff -a"
+    - name: remove swap fstab
+      shell: "sudo sed '/swap.img/d' -i /etc/fstab"
  
     - name: join cluster	
       shell: "{{ hostvars['master'].join_command }} >> node_joined.txt"
