--- a/master.yml
+++ b/master.yml
@@ -7,7 +7,7 @@
       shell: "sudo sed '/swap.img/d' -i /etc/fstab"
 
     - name: initialize the cluster
-      shell: kubeadm init >> cluster_initialized.txt
+      shell: kubeadm init --pod-network-cidr=10.244.0.0/16 >> cluster_initialized.txt
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
